# thehomie-framework

./: .gitignore  .graphifyignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESIGN.md  INSTALL.md  NOTICE.md  README.md  SECURITY.md  WORKFLOW.md  install.ps1  install.sh
.archon/commands/: image-node-intake.md  image-node-prompt-pack.md  image-node-qa.md  image-node-render.md  image-node-report.md  image-node-select.md  prp-docs-verification.md  prp-implement-test-first.md  prp-package.md  prp-plan.md  prp-preflight.md  prp-reconnaissance.md  prp-regression-validation.md  prp-review-security-state.md  prp-review-simplification.md  prp-review-spec.md  prp-test-fix.md
.archon/image-nodes/: brand-identity.md  campaign-social-visual.md  infographic-explainer.md  people-character.md  product-commerce-visual.md  realistic-photography.md  typography-poster.md
.archon/scripts/: pack-validate.py  style-corpus.py
.archon/workflows/: image-node-factory.yaml  implement-prp.yaml
.claude/chat/: adb_control.py  background_tasks.py  bot-status.sh  browser_audit.py  browser_control.py  browser_ops.py  browser_workflows.py  cabinet_relay.py  cli.py  cli_backup.py  main.py  (+30 more)
.claude/scripts/: .env.example  autostart.py  backup_tool.py  bot_lifecycle_switch.py  bot_watchdog.py  cli_entry.py  cognitive_loop_test_harness.py  config.py  cron_entrypoint.sh  dashboard_api.py  dashboard_bot_lifecycle.py  dashboard_db.py  db.py  entity_contradictions.py  entity_extractor.py  episodes.py  finance_ingest.py  framework_update.py  gateway.py  heartbeat.py  hermes_scout.py  image_card.py  living_memory.py  local_extension_loader.py  memory_dream.py  memory_flush.py  memory_index.py  memory_reflect.py  memory_search.py  memory_weekly.py  notifications.py  pairing_api.py  pdf_to_markdown.py  persona_learning_tick.py  pyproject.toml  run_bot_start.bat  run_github_signal.bat  run_hidden.vbs  run_linkedin_growth.bat  run_persona_learning.bat  (+24 more)
.claude/scripts/cabinet/: room_commands.py  room_state.py  text_orchestrator.py  tool_policy.py
.claude/scripts/cabinet/voice/: agent_bridge.py  lifecycle.py  livekit_agent.py  livekit_session.py  voice_pipeline.py  voice_router.py  voice_server.py
.claude/scripts/cofounder/: __init__.py  agenda.py  briefing.py  delegate.py  engine_archon.py  notify.py  orchestrate.py  persona.py  project_model.py  report.py  repos.py  run_pass.py  state.py  status.py  workflow_author.py  worktick.py
.claude/scripts/evolve/: compare.py  config_override.py  evolve_loop.py  replay.py  replay_tracing.py
.claude/scripts/github_signal/: __init__.py  config.py  engine.py  eval_runner.py  fetch.py  output.py  picks.py  scout_sync.py  state.py  trending.py
.claude/scripts/integrations/: analytics_api.py  asana_api.py  cabinet_api.py  calendar_api.py  capabilities.py  circle_api.py  docs_api.py  drive_api.py  email_cleanup.py  gmail.py  outlook.py  personal_gmail.py  postiz_api.py  registry.py  scheduled_api.py  search_console_api.py  sheets_api.py  slack_api.py  social_media.py
.claude/scripts/lib/: __init__.py
.claude/scripts/orchestration/: api.py  blueprint_catalog.py  browser_executor.py  contract.py  convoy_service.py  db.py  dead_targets.py  lifecycle_guard.py  mailbox_service.py  models.py  restart_loop_guard.py  route_policy.py  run_api.py  suggestion_catalog.py  suggestions.py
.claude/scripts/personas/: __init__.py  _audit.py  activity.py  archon.py  boot.py  capabilities.py  clone.py  core.py  lifecycle.py  migrate.py  repo_scout.py  services.py
.claude/scripts/runtime/: base.py  bootstrap.py  claude_sdk.py  framework_registry.py  gemini_cli.py  health.py  lane_router.py  model_control.py  openai_codex.py  openai_compatible.py  profiles.py  prompt_builder.py  registry.py  routing.py  selection.py  subprocess_env.py  toolsets.py
.claude/scripts/security/: __init__.py  kill_switches.py  patterns.py
.claude/scripts/social/: browser_homie_runner.py  cadence.py  channels.py  channels.yaml  content_factory.py  dashboard_ops.py  db.py  draft_generator.py  image_host.py  linkedin_growth.py  linkedin_workshop.py  models.py  notify.py  post_executor.py  postiz_canary.py  postiz_payload.py  postiz_reconcile.py  primo_workshop.py  quote_card.py  service.py
.claude/scripts/social/brand_designs/: YourBrand.json  theratesguy.json
.claude/scripts/social/voice_profiles/: pedro-linkedin.md  primo-x.md  theratesguy.md
.claude/scripts/tests/: conftest.py  tenant_fixtures.py  test_adapter_discord.py  test_adapter_telegram.py  test_adapter_webhook.py  test_agent_browser_framework.py  test_amendment_pipeline_idempotence.py  test_amendment_rollback.py  test_anti_patterns.py  test_automation_ux_commands.py  test_autostart.py  test_backup_tool.py  test_blueprint_catalog.py  test_bot_lifecycle_switch.py  test_bot_liveness.py  test_bot_restart.py  test_bot_watchdog.py  test_browser_audit.py  test_browser_executor.py  test_browser_homie_runner.py  test_browser_ops.py  test_browser_workflows.py  test_cabinet_api.py  test_cabinet_http_client.py  test_cabinet_profile_execution.py  test_cabinet_relay.py  test_cabinet_room_commands.py  test_cabinet_room_state.py  test_cabinet_text_orchestrator.py  test_cabinet_tool_policy.py  test_cabinet_voice_lifecycle.py  test_cabinet_voice_livekit.py  test_cabinet_voice_router.py  test_cabinet_voice_state_machine.py  test_capabilities.py  test_chat_command_tool_smoke_matrix.py  test_chat_lifecycle_hooks.py  test_chat_router_timeout.py  test_chat_runtime_engine.py  test_chat_wrappers.py  (+207 more)
.claude/scripts/video_learning/: __init__.py  analyze.py  extract.py  models.py  service.py  store.py
.claude/scripts/watchers/: _watermark.py  watch_github.py  watch_http_json.py  watch_rss.py
dashboard/: README.md
docs/: browserops-agent-browser-manual.md  cabinet-room-manual.md  cabinet-voice-setup.md  cofounder-manual.md  mc-profile-contract.md  paperclip-seam.md  social-write-executor-manual.md  the-living-self-manual.md
optional-skills/: README.md
scripts/: release.sh  sanitize_test.py  sync_seo_stack_skills.py  test_sync_seo_stack_skills.py
(+273 files in other folders)
