[project]
name = "thehomie"
version = "1.1.0"
description = "The Homie — personal AI agent framework"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.48",
    "python-dotenv>=1.0.0",
    "win10toast-click>=0.1.2; sys_platform == 'win32'",
    "setuptools<81; sys_platform == 'win32'",
    "tzdata>=2024.1",
    # Phase 3: Memory Search
    # BGE-base-en-v1.5 via FastEmbed / ONNX Runtime — public Apache-2.0 model,
    # no HF auth, no torch. Swapped from EmbeddingGemma+sentence-transformers
    # on 2026-04-22.
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26.0",
    # Postgres + pgvector (optional — SQLite used as fallback)
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",
    # Phase 5: Direct Platform Integrations
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "asana>=5.0.0",
    "slack-sdk>=3.27.0",
    # Phase 6: Chat Interface
    "slack-bolt>=1.20.0",
    "aiohttp>=3.9.0",
    # Phase 7: Telegram Chat
    "python-telegram-bot>=21.0",
    # Phase 8: Voice Support (STT + TTS)
    "openai>=1.0.0",
    "edge-tts>=7.0.0",
    # Phase 9: Dashboard Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "markdown>=3.7",
    "openpyxl>=3.1.5",
    # Phase 10: Additional Chat Adapters (Move 4)
    "discord.py>=2.4.0",
    "httpx>=0.27.0",
    # Gateway: WebSocket server
    "websockets>=13.0",
    "pytest-asyncio>=1.3.0",
    "pdfplumber>=0.11.9",
    # Phase 12: CLI
    "click>=8.1.0",
    "pyreadline3>=3.4.0; sys_platform == 'win32'",
    "langfuse>=4.0.1",
    "langsmith[claude-agent-sdk,otel]>=0.7.22",
    "otel-instrumentation-claude-agent-sdk @ git+https://github.com/justinbarias/opentelemetry-instrumentation-claude-agent-sdk.git",
    # Observability: error tracking (GlitchTip/Sentry)
    "sentry-sdk>=2.0.0",
    "pymupdf>=1.27.2.2",
    # gap-4 URL ingest — sync HTTP + boilerplate-stripping HTML extraction
    "requests>=2.32.0",
    "trafilatura>=1.12.0",
    # PRP-7c Phase 3 — profile-aware bot cleanup uses psutil to read other
    # processes' HOMIE_HOME env var so the cleanup never crosses profile
    # boundaries. The ImportError fallback in shared._process_belongs_to_profile
    # is belt-and-suspenders; psutil is the primary contract.
    "psutil>=5.9.0",
    # PRD-8 Phase 2 / WS1 — explicit pyyaml dep (M1 lock 2026-05-04).
    # Currently transitively present at 6.0.3 via langfuse; making the
    # contract explicit so personas.services.load_persona_config can rely
    # on it without depending on the transitive resolution staying stable.
    "pyyaml>=6.0",
    # PRD-8 Phase 3 / WS2 — explicit Pillow dep (R6 NB2, 2026-05-07).
    # Required for avatar magic-byte+anti-spoof validation in
    # dashboard_api.py PUT /api/agents/{id}/avatar (per criterion
    # framework_endpoint_put_and_delete_avatar). Transitive presence via
    # FastEmbed/etc is NOT relied on per Rule 2 / explicit-contract
    # discipline.
    "Pillow>=10.0.0",
]

[project.scripts]
thehomie = "cli_entry:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    # PRD-8 Phase 2 / WS1 — type stubs for the explicit pyyaml dep so
    # `mypy --strict personas/services.py` is clean.
    "types-PyYAML>=6.0",
]
# PRD-8 Phase 6 — cabinet voice. Optional install per the port-first PRP:
# voice subprocess (`cabinet/voice/voice_server.py`) imports pipecat at
# runtime; tests + non-voice imports tolerate ImportError so the framework
# stays installable without ~2GB of pipecat deps in default checkouts.
voice = [
    "pipecat-ai[websocket,silero]==0.0.108",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

# PRD-8 Phase 5a — cabinet text_router.py and text_orchestrator.py contain
# verbatim ports of upstream prompt strings (the exact wording is calibrated
# for Haiku) and per-line UI labels that must stay readable for grep parity
# with `warroom-text-orchestrator.ts:114-525`. E501 line-length on those
# files would force gratuitous wrapping that diverges from upstream.
[tool.ruff.lint.per-file-ignores]
"cabinet/text_router.py" = ["E501"]
"cabinet/text_orchestrator.py" = ["E501"]
# PRD-8 Phase 5a / WS2 — cabinet REST + SSE endpoints in dashboard_api.py
# carry camelCase wire fields verbatim from upstream `dashboard.ts:802-1254`
# (`meetingId`, `chatId`, `clientMsgId`, `agentId`) so the wire contract
# matches ClaudeClaw's UI consumers without translation. N803/N806/N815
# would force snake_case which would either rename the wire field (Q4
# violation) or require `Query(alias=...)` boilerplate for every param.
"dashboard_api.py" = ["N803", "N806", "N815"]
# PRD-8 Phase 5b / WS1 — cabinet_api.py exception class names are pinned
# verbatim by PRPs/active/PRP-prd-8-phase-5b-cabinet-chat-routing.md and
# the JSON contract criterion `cabinet_api_friendly_error_classes`
# (CabinetAPIUnreachable, CabinetAuthFailure, CabinetKillSwitchDisabled,
# CabinetMeetingNotFound, CabinetMeetingEnded, CabinetBadRequest,
# CabinetChatScopeMismatch). N818 would force an `Error` suffix that
# diverges from the locked contract.
"integrations/cabinet_api.py" = ["N818"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
# PRP-7c Phase 3 / R3 NM1 — register custom marker so future ``--strict-markers``
# enforcement does not silently drop the marker. ``pytest -m live_chat_acceptance``
# runs the cross-repo live-chat lock acceptance gate.
markers = [
    "live_chat_acceptance: cross-repo live-chat lock fix acceptance gate",
]
